--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description" content="__META_DESCRIPTION__"/>
+    <meta name="og:title" content="__META_OG_TITLE__"/>
+    <meta name="og:description" content="__META_OG_DESCRIPTION__"/>
+    <meta name="og:image" content="__META_OG_IMAGE__"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
